# Mangatan

./: .gitignore  Dockerfile  README.md  Script(for browser)( 21.5.10).js  Script(for browser)( 21.5.16).js  Script(for browser)( 21.5.21.5).js  Script(for browser)( 21.5.21.6).js  Script(for browser)( 21.5.21.7).js  Script(for browser)(Final version).js  Script(for browser).js  Script.Js  Script.js (for browser)  ScriptV2.js  compose.yaml  desktop-script.user.js  mobile-script.user.js  mobiletesting.js  script(For mobile browsers(  24.7.24)).js  script(For mobile browsers(FINAL)).js  script(For mobile browsers).js
.github/workflows/: docker.yml
Ocr-Server/: Run-me(googlelens).bat  engines.py  server(local-ocr).py  server.js  server.py
ocr-server/: engines.py  main.py  pyproject.toml  server.py
ocr-server-legacy/: Run-me(local-ocr).bat  package-lock.json  package.json  server(local-ocr).py  server.js
