[project]
name = "ocr-server"
version = "0.1.0"
description = "Server for performing OCR on images"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "aiohttp>=3.12.15",
    "betterproto==2.0.0b7",
    "chrome-lens-py==3.1.0",
    "flask[async]>=3.1.1",
    "oneocr>=1.0.9",
    "waitress>=3.0.2",
]
